force-app/main/default/objects/Offering_X_Rate__c/Offering_X_Rate__c.object-meta.xml
<CustomObject>
    <label>Offering X Rate</label>
    <nameField>
        <label>Offering X Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offering X Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>