force-app/main/default/objects/Offering_X_Rate__c/fields/OfferingsUniqueID__c.field-meta.xml
<CustomField>
    <fullName>OfferingsUniqueID__c</fullName>
    <formula>Offerings__r.Unique_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offering&#39;s Unique ID</label>
    <type>Text</type>
</CustomField>