force-app/main/default/objects/Offering_X_Rate__c/fields/Rate_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Rate_Agreement_Name__c</fullName>
    <formula>Rate__r.Rate_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Agreement Name</label>
    <type>Text</type>
</CustomField>