force-app/main/default/objects/Offering_X_Rate__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <formula>TEXT(Rate__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Type</label>
    <type>Text</type>
</CustomField>