force-app/main/default/objects/Offering_X_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Offerings__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Active</label>
    <language>en_US</language>
</ListView>